--- a/veterinary/css/style.css
+++ b/veterinary/css/style.css
@@ -730,3 +730,14 @@ footer {
   margin: 15px 10px auto auto;
   float: right;
 }
+
+.js .js-scroll {
+  opacity: 0;
+  transform: translate3d(0, -30px, 0);
+  transition: 0.8s;
+}
+
+.js .js-scroll.ativo {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+}
